kubernetes.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app: ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 8080
          - path: /api/todo
            pathType: Prefix
            backend:
              service:
                name: todo-service
                port:
                  number: 8080
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /api/login
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /api/logout
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080

# Redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:8.10
          args: ["--requirepass", "$(REDIS_PASSWORD)"]
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379

---
# UI
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: ui:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
spec:
  selector:
    app: ui
  ports:
    - port: 8080
      protocol: TCP

# Todo Service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-service
  labels:
    app: todo-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-service
  template:
    metadata:
      labels:
        app: todo-service
    spec:
      containers:
        - name: todo-service
          image: todo-service:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo-service
  ports:
    - protocol: TCP
      port: 8080

# Todo Service - PostgreSQL
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-service-postgres
spec:
  serviceName: todo-service-postgres
  replicas: 1
  selector:
    matchLabels:
      app: todo-service-postgres
  template:
    metadata:
      labels:
        app: todo-service-postgres
    spec:
      containers:
        - name: todo-service-postgres
          image: postgres:18
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: todo-service-postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: todo-service-postgres-storage
          persistentVolumeClaim:
            claimName: todo-service-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: todo-service-postgres
spec:
  selector:
    app: todo-service-postgres
  ports:
    - protocol: TCP
      port: 5432

# User Service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: user-service:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8080

# User Service - PostgreSQL
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-service-postgres
spec:
  serviceName: user-service-postgres
  replicas: 1
  selector:
    matchLabels:
      app: user-service-postgres
  template:
    metadata:
      labels:
        app: user-service-postgres
    spec:
      containers:
        - name: user-service-postgres
          image: postgres:18
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: user-service-postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: user-service-postgres-storage
          persistentVolumeClaim:
            claimName: user-service-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-postgres
spec:
  selector:
    app: user-service-postgres
  ports:
    - protocol: TCP
      port: 5432
